Mise à jour des ressources API
